--- a/index.html
+++ b/index.html
@@ -15,5 +15,23 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="es-RC-container">
+        <section class="es-hero">
+            <header class="es-hero__left">
+                <img class="es-hero__left--logo">
+                <p class="es-hero__left--new">nowość</p>
+                <h1 class="es-hero__left--title">hair drink</h1>
+                <p class="es-hero__left--subtitle">niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce lamellarnej</p>
+            </header>
+            <div class="es-hero__middle">
+                <img class="es-hero__middle--badge">
+                <img class="es-hero__middle--packshot">
+            </div>
+            <p class="es-hero__right" es-hero__right--headline>
+                10x gładsze włosy* efekt tafli wody
+            </p>
+        </section>
+    </section>
+  </body>
 </html>
