hero in progress

--- a/index.html
+++ b/index.html
@@ -13,25 +13,47 @@
       rel="stylesheet"
     />
     <!-- stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="es-RC-container">
-        <section class="es-hero">
-            <header class="es-hero__left">
-                <img class="es-hero__left--logo">
-                <p class="es-hero__left--new">nowość</p>
-                <h1 class="es-hero__left--title">hair drink</h1>
-                <p class="es-hero__left--subtitle">niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce lamellarnej</p>
-            </header>
-            <div class="es-hero__middle">
-                <img class="es-hero__middle--badge">
-                <img class="es-hero__middle--packshot">
-            </div>
-            <p class="es-hero__right" es-hero__right--headline>
-                10x gładsze włosy* efekt tafli wody
+    <section id="es-RC-container">
+      <section class="es-hero">
+        <header class="es-hero__left">
+          <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png"/>
+            <p class="es-hero__left--new">nowość</p>
+            <h1 class="es-hero__left--title">hair drink</h1>
+            <p class="es-hero__left--subtitle">
+              niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce
+              lamellarnej
             </p>
-        </section>
+        </header>
+        <div class="es-hero__middle">
+          <img class="es-hero__middle--badge" />
+          <img class="es-hero__middle--packshot" />
+        </div>
+        <p class="es-hero__right" es-hero__right--headline>
+          10x gładsze włosy* efekt tafli wody
+        </p>
+      </section>
+
+      <section class="es-benefits">
+        <header class="es-benefits__header">
+          <div>
+            <p>szukasz natychmiastowego efektu transformacji włosów?</p>
+            <p>
+              Wypróbuj nowość! Garnier Fructis Hair Drink dla natychmiastowo
+              gładkich, błyszczących włosów bez obciążenia.
+            </p>
+          </div>
+          <div>
+            <h1>
+              dlaczego twoje włosy pokochają
+              <span>hair drink?</span>
+            </h1>
+          </div>
+        </header>
+        <section class="es-benefits__icon-wrapper"></section>
+      </section>
     </section>
   </body>
 </html>
