--- a/index.html
+++ b/index.html
@@ -17,23 +17,28 @@
   </head>
   <body>
     <section id="es-RC-container">
+
       <section class="es-hero">
         <header class="es-hero__left">
-          <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png"/>
-            <p class="es-hero__left--new">nowość</p>
-            <h1 class="es-hero__left--title">hair drink</h1>
-            <p class="es-hero__left--subtitle">
-              niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce
-              lamellarnej
-            </p>
+          <img
+            class="es-hero__left--logo"
+            src="./img/garnier-fructis-logo.png"
+          />
+          <p class="es-hero__left--new">nowość</p>
+          <h1 class="es-hero__left--title">hair drink</h1>
+          <p class="es-hero__left--subtitle">
+            niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce
+            lamellarnej
+          </p>
         </header>
+
         <div class="es-hero__middle">
-          <img class="es-hero__middle--badge" />
-          <img class="es-hero__middle--packshot" />
-        </div>
-        <p class="es-hero__right" es-hero__right--headline>
+          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png"/>
+          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png"/>
+          <p class="es-hero__right" es-hero__right--headline>
           10x gładsze włosy* efekt tafli wody
         </p>
+        </div>
       </section>
 
       <section class="es-benefits">
