--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   </head>
   <body>
     <section id="es-RC-container">
-
       <section class="es-hero">
         <header class="es-hero__left">
           <img
@@ -32,12 +31,20 @@
           </p>
         </header>
 
-        <div class="es-hero__middle">
-          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png"/>
-          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png"/>
-          <p class="es-hero__right" es-hero__right--headline>
-          10x gładsze włosy* efekt tafli wody
-        </p>
+        <div class="es-hero__right">
+          <div class="es-hero__middle">
+            <img
+              class="es-hero__middle--badge"
+              src="./img/badge-97-percent-natural-origin.png"
+            />
+            <img
+              class="es-hero__middle--packshot"
+              src="./img/hair-drink-packshot.png"
+            />
+          </div>
+          <div class="es-hero__right--headline">
+            <p>10x gładsze włosy* efekt tafli wody</p>
+          </div>
         </div>
       </section>
 
