--- a/index.html
+++ b/index.html
@@ -50,20 +50,21 @@
 
       <section class="es-benefits">
         <header class="es-benefits__header">
-          <div>
-            <p>szukasz natychmiastowego efektu transformacji włosów?</p>
-            <p>
+          <div class="es-benefits__header--container">
+            <p class="es-benefits__header--subtitle">szukasz natychmiastowego efektu transformacji włosów?</p>
+            <p class="es-benefits__header--subtitle--regular">
               Wypróbuj nowość! Garnier Fructis Hair Drink dla natychmiastowo
               gładkich, błyszczących włosów bez obciążenia.
             </p>
           </div>
-          <div>
-            <h1>
+          <div class="es-benefits__main">
+            <h1 class="es-benefits__main--title">
               dlaczego twoje włosy pokochają
               <span>hair drink?</span>
             </h1>
           </div>
         </header>
+        
         <section class="es-benefits__icon-wrapper"></section>
       </section>
     </section>
