how it works done

--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
                 </figcaption>
             </figure>
         </section>
+
+
+      </section>
+
+      <section class="es-how">
+        <div class="es-how__wrapper">
+          <h1 class="es-how__title">Jak to <span>działa?</span></h1>
+          <p class="es-how__descr">Woda lamellarna natychmiastowo pokrywa włókna włosów odbijającą światło warstwą nadając efekt tafli!</p>
+        </div>
+      </section>
+      <section>
+        
       </section>
     </section>
   </body>
