--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
 
         <section class="es-benefits__icon-wrapper">
             <figure class="es-benefits__icon-single">
-                <img class="es-benefots__icon-single--img" src="./img/icon-immediate-effect.png">
+                <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.png">
                 <figcaption>
                     <p class="es-benefits__icon-single--title">Natychmiastowe działanie</p>
                     <p class="es-benefits__icon-single--descr">Efekt transformacji włosów w 10 sekund.</p>
                 </figcaption>
             </figure>
             <figure class="es-benefits__icon-single">
-                <img class="es-benefots__icon-single--img" src="./img/icon-smoother-hair.png">
+                <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.png">
                 <figcaption>
                     <p class="es-benefits__icon-single--title">Efekt tafli wody</p>
                     <p class="es-benefits__icon-single--descr">Niesamowity blask i 10x gładsze włosy*.</p>
                 </figcaption>
             </figure>
             <figure class="es-benefits__icon-single">
-                <img class="es-benefots__icon-single--img" src="./img/icon-97-percent-natural-ingredients.png">
+                <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.png">
                 <figcaption>
                     <p class="es-benefits__icon-single--title">Składniki</p>
                     <p class="es-benefits__icon-single--descr">97% składników naturalnego pochodzenia.</p>
                 </figcaption>
             </figure>
             <figure class="es-benefits__icon-single">
-                <img class="es-benefots__icon-single--img" src="./img/icon-vegan-formula.png">
+                <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
                 <figcaption>
                     <p class="es-benefits__icon-single--title">Wegańska formuła</p>
                     <p class="es-benefits__icon-single--descr">Bez silikonów dla naturalnych w dotyku włosów.</p>
@@ -105,7 +105,41 @@
           <p class="es-how__descr">Woda lamellarna natychmiastowo pokrywa włókna włosów odbijającą światło warstwą nadając efekt tafli!</p>
         </div>
       </section>
-      <section>
+
+      <section class="es-use">
+        <div class="es-use__container">
+          <h2 class="es-use__title">Jak używać <span>fructis hair drink?</span></h2>
+        </div>
+        <div class-es="es-use__wrapper">
+          <figure class="es-single">
+            <img class="es-single--img" src="./img/step-1-squeeze-water-out.png">
+            <figcaption>
+              <p class="es-single--step">Krok 1</p>
+              <p class="es-single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p> 
+            </figcaption>
+          </figure>
+          <figure class="es-single">
+            <img class="es-single--img" src="./img/step-2-apply-on-hair.png">
+            <figcaption>
+              <p class="es-single--step">Krok 2</p>
+              <p class="es-single--descr">Aplikuj omijając skórę głowy.</p> 
+            </figcaption>
+          </figure>
+          <figure class="es-single">
+            <img class="es-single--img" src="./img/step-3-wait-and-rinse.png">
+            <figcaption>
+              <p class="es-single--step">Krok 3</p>
+              <p class="es-single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p> 
+            </figcaption>
+          </figure>
+        </div>
+        <!-- <div class="es-use__video--wrapper">
+          <video controls playsinline poster="./img/video.png" id="es-use__video--player">
+            <source src="" type="video/mp4">
+            <source src="" type="video/ogg">
+            Twoja przeglądarka nie pozwala na wyświetlanie filmów.
+          </video>
+        </div> -->
         
       </section>
     </section>
