--- a/index.html
+++ b/index.html
@@ -110,26 +110,26 @@
         <div class="es-use__container">
           <h2 class="es-use__title">Jak używać <span>fructis hair drink?</span></h2>
         </div>
-        <div class-es="es-use__wrapper">
-          <figure class="es-single">
-            <img class="es-single--img" src="./img/step-1-squeeze-water-out.png">
+        <div class="es-use__wrapper">
+          <figure class="es-use__single">
+            <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.png">
             <figcaption>
-              <p class="es-single--step">Krok 1</p>
-              <p class="es-single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p> 
+              <p class="es-use__single--step">Krok 1</p>
+              <p class="es-use__single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p> 
             </figcaption>
           </figure>
-          <figure class="es-single">
-            <img class="es-single--img" src="./img/step-2-apply-on-hair.png">
+          <figure class="es-use__single">
+            <img class="es-use__single--img" src="./img/step-2-apply-on-hair.png">
             <figcaption>
-              <p class="es-single--step">Krok 2</p>
-              <p class="es-single--descr">Aplikuj omijając skórę głowy.</p> 
+              <p class="es-use__single--step">Krok 2</p>
+              <p class="es-use__single--descr">Aplikuj omijając skórę głowy.</p> 
             </figcaption>
           </figure>
-          <figure class="es-single">
-            <img class="es-single--img" src="./img/step-3-wait-and-rinse.png">
+          <figure class="es-use__single">
+            <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.png">
             <figcaption>
-              <p class="es-single--step">Krok 3</p>
-              <p class="es-single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p> 
+              <p class="es-use__single--step">Krok 3</p>
+              <p class="es-use__single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p> 
             </figcaption>
           </figure>
         </div>
