--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         </div> -->
         
       </section>
+      <section class="es-before-after">
+        <p>przed</p>
+        <p>po**</p>
+      </section>
     </section>
   </body>
 </html>
