add routine markup

--- a/index.html
+++ b/index.html
@@ -140,12 +140,50 @@
             Twoja przeglądarka nie pozwala na wyświetlanie filmów.
           </video>
         </div> -->
-        
       </section>
+
       <section class="es-before-after">
         <p>przed</p>
         <p>po**</p>
       </section>
+
+      <section class="es-routine">
+        <h2 class="es-routine__header">Wypróbuj całą rutynę hair food pineapple</h2>
+        <div class="es-routine__wrapper--flex">
+          <!-- <a href="###" target="_blank"> -->
+            <figure class="es-routine__single">
+            <img src="./img/shampoo.png">
+            <figcaption>
+              <p class="es-routine__header">szampon</p>
+              <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
+            </figcaption>
+          </figure>
+          <!-- </a> -->
+          <!-- <a href="###" target="_blank"> -->
+            <figure class="es-routine__single">
+            <img src="./img/mask.png">
+            <figcaption>
+              <p class="es-routine__header">maska</p>
+              <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
+            </figcaption>
+          </figure>
+          <!-- </a> -->
+          <!-- <a href="###" target="_blank"> -->
+            <figure class="es-routine__single">
+            <img src="./img/conditioner.png">
+            <figcaption>
+              <p class="es-routine__header">odżywka</p>
+              <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
+            </figcaption>
+          </figure>
+          <!-- </a> -->
+        </div>
+        <div class="es-routine__wrapper--border">
+          <p>Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z recyklingu***.</p>
+          <h2>Wybierając fructis hair food <span>wspierasz środowisko</span></h2>
+        </div>
+      </section>
+
     </section>
   </body>
 </html>
