add cross sell markup

--- a/index.html
+++ b/index.html
@@ -1,189 +1,218 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Garnier Fructis Hair Drink</title>
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <section id="es-RC-container">
-      <section class="es-hero">
-        <header class="es-hero__left">
-          <img
-            class="es-hero__left--logo"
-            src="./img/garnier-fructis-logo.png"
-          />
-          <p class="es-hero__left--new">nowość</p>
-          <h1 class="es-hero__left--title">hair drink</h1>
-          <p class="es-hero__left--subtitle">
-            niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce
-            lamellarnej
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Garnier Fructis Hair Drink</title>
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <section id="es-RC-container">
+    <section class="es-hero">
+      <header class="es-hero__left">
+        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" />
+        <p class="es-hero__left--new">nowość</p>
+        <h1 class="es-hero__left--title">hair drink</h1>
+        <p class="es-hero__left--subtitle">
+          niesamowity blask włosów w 10s, dzięki błyskawicznej odżywce
+          lamellarnej
+        </p>
+      </header>
+
+      <div class="es-hero__right">
+        <div class="es-hero__middle">
+          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png" />
+          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png" />
+        </div>
+        <div class="es-hero__right--headline">
+          <p>10x gładsze włosy* efekt tafli wody</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="es-benefits">
+      <header class="es-benefits__header">
+        <div class="es-benefits__header--container">
+          <p class="es-benefits__header--subtitle">szukasz natychmiastowego efektu transformacji włosów?</p>
+          <p class="es-benefits__header--subtitle--regular">
+            Wypróbuj nowość! Garnier Fructis Hair Drink dla natychmiastowo
+            gładkich, błyszczących włosów bez obciążenia.
           </p>
-        </header>
-
-        <div class="es-hero__right">
-          <div class="es-hero__middle">
-            <img
-              class="es-hero__middle--badge"
-              src="./img/badge-97-percent-natural-origin.png"
-            />
-            <img
-              class="es-hero__middle--packshot"
-              src="./img/hair-drink-packshot.png"
-            />
-          </div>
-          <div class="es-hero__right--headline">
-            <p>10x gładsze włosy* efekt tafli wody</p>
-          </div>
         </div>
+        <div class="es-benefits__main">
+          <h1 class="es-benefits__main--title">
+            dlaczego twoje włosy pokochają
+            <span>hair drink?</span>
+          </h1>
+        </div>
+      </header>
+
+      <section class="es-benefits__icon-wrapper">
+        <figure class="es-benefits__icon-single">
+          <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.png">
+          <figcaption>
+            <p class="es-benefits__icon-single--title">Natychmiastowe działanie</p>
+            <p class="es-benefits__icon-single--descr">Efekt transformacji włosów w 10 sekund.</p>
+          </figcaption>
+        </figure>
+        <figure class="es-benefits__icon-single">
+          <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.png">
+          <figcaption>
+            <p class="es-benefits__icon-single--title">Efekt tafli wody</p>
+            <p class="es-benefits__icon-single--descr">Niesamowity blask i 10x gładsze włosy*.</p>
+          </figcaption>
+        </figure>
+        <figure class="es-benefits__icon-single">
+          <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.png">
+          <figcaption>
+            <p class="es-benefits__icon-single--title">Składniki</p>
+            <p class="es-benefits__icon-single--descr">97% składników naturalnego pochodzenia.</p>
+          </figcaption>
+        </figure>
+        <figure class="es-benefits__icon-single">
+          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
+          <figcaption>
+            <p class="es-benefits__icon-single--title">Wegańska formuła</p>
+            <p class="es-benefits__icon-single--descr">Bez silikonów dla naturalnych w dotyku włosów.</p>
+          </figcaption>
+        </figure>
       </section>
 
-      <section class="es-benefits">
-        <header class="es-benefits__header">
-          <div class="es-benefits__header--container">
-            <p class="es-benefits__header--subtitle">szukasz natychmiastowego efektu transformacji włosów?</p>
-            <p class="es-benefits__header--subtitle--regular">
-              Wypróbuj nowość! Garnier Fructis Hair Drink dla natychmiastowo
-              gładkich, błyszczących włosów bez obciążenia.
-            </p>
-          </div>
-          <div class="es-benefits__main">
-            <h1 class="es-benefits__main--title">
-              dlaczego twoje włosy pokochają
-              <span>hair drink?</span>
-            </h1>
-          </div>
-        </header>
 
-        <section class="es-benefits__icon-wrapper">
-            <figure class="es-benefits__icon-single">
-                <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.png">
-                <figcaption>
-                    <p class="es-benefits__icon-single--title">Natychmiastowe działanie</p>
-                    <p class="es-benefits__icon-single--descr">Efekt transformacji włosów w 10 sekund.</p>
-                </figcaption>
-            </figure>
-            <figure class="es-benefits__icon-single">
-                <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.png">
-                <figcaption>
-                    <p class="es-benefits__icon-single--title">Efekt tafli wody</p>
-                    <p class="es-benefits__icon-single--descr">Niesamowity blask i 10x gładsze włosy*.</p>
-                </figcaption>
-            </figure>
-            <figure class="es-benefits__icon-single">
-                <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.png">
-                <figcaption>
-                    <p class="es-benefits__icon-single--title">Składniki</p>
-                    <p class="es-benefits__icon-single--descr">97% składników naturalnego pochodzenia.</p>
-                </figcaption>
-            </figure>
-            <figure class="es-benefits__icon-single">
-                <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
-                <figcaption>
-                    <p class="es-benefits__icon-single--title">Wegańska formuła</p>
-                    <p class="es-benefits__icon-single--descr">Bez silikonów dla naturalnych w dotyku włosów.</p>
-                </figcaption>
-            </figure>
-        </section>
+    </section>
 
+    <section class="es-how">
+      <div class="es-how__wrapper">
+        <h1 class="es-how__title">Jak to <span>działa?</span></h1>
+        <p class="es-how__descr">Woda lamellarna natychmiastowo pokrywa włókna włosów odbijającą światło warstwą nadając
+          efekt tafli!</p>
+      </div>
+    </section>
 
-      </section>
-
-      <section class="es-how">
-        <div class="es-how__wrapper">
-          <h1 class="es-how__title">Jak to <span>działa?</span></h1>
-          <p class="es-how__descr">Woda lamellarna natychmiastowo pokrywa włókna włosów odbijającą światło warstwą nadając efekt tafli!</p>
-        </div>
-      </section>
-
-      <section class="es-use">
-        <div class="es-use__container">
-          <h2 class="es-use__title">Jak używać <span>fructis hair drink?</span></h2>
-        </div>
-        <div class="es-use__wrapper">
-          <figure class="es-use__single">
-            <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.png">
-            <figcaption>
-              <p class="es-use__single--step">Krok 1</p>
-              <p class="es-use__single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p> 
-            </figcaption>
-          </figure>
-          <figure class="es-use__single">
-            <img class="es-use__single--img" src="./img/step-2-apply-on-hair.png">
-            <figcaption>
-              <p class="es-use__single--step">Krok 2</p>
-              <p class="es-use__single--descr">Aplikuj omijając skórę głowy.</p> 
-            </figcaption>
-          </figure>
-          <figure class="es-use__single">
-            <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.png">
-            <figcaption>
-              <p class="es-use__single--step">Krok 3</p>
-              <p class="es-use__single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p> 
-            </figcaption>
-          </figure>
-        </div>
-        <!-- <div class="es-use__video--wrapper">
+    <section class="es-use">
+      <div class="es-use__container">
+        <h2 class="es-use__title">Jak używać <span>fructis hair drink?</span></h2>
+      </div>
+      <div class="es-use__wrapper">
+        <figure class="es-use__single">
+          <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.png">
+          <figcaption>
+            <p class="es-use__single--step">Krok 1</p>
+            <p class="es-use__single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p>
+          </figcaption>
+        </figure>
+        <figure class="es-use__single">
+          <img class="es-use__single--img" src="./img/step-2-apply-on-hair.png">
+          <figcaption>
+            <p class="es-use__single--step">Krok 2</p>
+            <p class="es-use__single--descr">Aplikuj omijając skórę głowy.</p>
+          </figcaption>
+        </figure>
+        <figure class="es-use__single">
+          <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.png">
+          <figcaption>
+            <p class="es-use__single--step">Krok 3</p>
+            <p class="es-use__single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p>
+          </figcaption>
+        </figure>
+      </div>
+      <!-- <div class="es-use__video--wrapper">
           <video controls playsinline poster="./img/video.png" id="es-use__video--player">
             <source src="" type="video/mp4">
             <source src="" type="video/ogg">
             Twoja przeglądarka nie pozwala na wyświetlanie filmów.
           </video>
         </div> -->
-      </section>
-
-      <section class="es-before-after">
-        <p>przed</p>
-        <p>po**</p>
-      </section>
-
-      <section class="es-routine">
-        <h2 class="es-routine__header">Wypróbuj całą rutynę hair food pineapple</h2>
-        <div class="es-routine__wrapper--flex">
-          <!-- <a href="###" target="_blank"> -->
-            <figure class="es-routine__single">
-            <img src="./img/shampoo.png">
-            <figcaption>
-              <p class="es-routine__header">szampon</p>
-              <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
-            </figcaption>
-          </figure>
-          <!-- </a> -->
-          <!-- <a href="###" target="_blank"> -->
-            <figure class="es-routine__single">
-            <img src="./img/mask.png">
-            <figcaption>
-              <p class="es-routine__header">maska</p>
-              <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
-            </figcaption>
-          </figure>
-          <!-- </a> -->
-          <!-- <a href="###" target="_blank"> -->
-            <figure class="es-routine__single">
-            <img src="./img/conditioner.png">
-            <figcaption>
-              <p class="es-routine__header">odżywka</p>
-              <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
-            </figcaption>
-          </figure>
-          <!-- </a> -->
-        </div>
-        <div class="es-routine__wrapper--border">
-          <p>Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z recyklingu***.</p>
-          <h2>Wybierając fructis hair food <span>wspierasz środowisko</span></h2>
-        </div>
-      </section>
-
     </section>
-  </body>
+
+    <section class="es-before-after">
+      <p>przed</p>
+      <p>po**</p>
+    </section>
+
+    <section class="es-routine">
+      <h2 class="es-routine__header">Wypróbuj całą rutynę hair food pineapple</h2>
+      <div class="es-routine__wrapper--flex">
+        <!-- <a href="###" target="_blank"> -->
+        <figure class="es-routine__single">
+          <img src="./img/shampoo.png">
+          <figcaption>
+            <p class="es-routine__header">szampon</p>
+            <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
+          </figcaption>
+        </figure>
+        <!-- </a> -->
+        <!-- <a href="###" target="_blank"> -->
+        <figure class="es-routine__single">
+          <img src="./img/mask.png">
+          <figcaption>
+            <p class="es-routine__header">maska</p>
+            <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
+          </figcaption>
+        </figure>
+        <!-- </a> -->
+        <!-- <a href="###" target="_blank"> -->
+        <figure class="es-routine__single">
+          <img src="./img/conditioner.png">
+          <figcaption>
+            <p class="es-routine__header">odżywka</p>
+            <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
+          </figcaption>
+        </figure>
+        <!-- </a> -->
+      </div>
+      <div class="es-routine__wrapper--border">
+        <p>Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z
+          recyklingu***.</p>
+        <h2>Wybierając fructis hair food <span>wspierasz środowisko</span></h2>
+      </div>
+    </section>
+
+    <section class="es-cross">
+      <h2 class="es-cross__header">Wybierz ulubionego <span>hair drinka</span> dla swoich spragnionych włosów!</h2>
+      <div class=es-cross__wrapper--flex>
+        <!-- <a href="###" target="_blank"> -->
+          <figure class="es-cross__single">
+            <img src="./img/pineapple.png">
+            <figcaption>
+              <h3 class="es-cross__title">Anananas</h3>
+              <p class="es-cross__subtitle">48H blasku*</p>
+              <p class="es-cross__descr">dla długich, matowych włosów</p>
+            </figcaption>
+          </figure>
+        <!-- </a> -->
+        <!-- <a href="###" target="_blank"> -->
+          <figure class="es-cross__single">
+            <img src="./img/pineapple.png">
+            <figcaption>
+              <h3 class="es-cross__title">Anananas</h3>
+              <p class="es-cross__subtitle">48H blasku*</p>
+              <p class="es-cross__descr">dla długich, matowych włosów</p>
+            </figcaption>
+          </figure>
+        <!-- </a> -->
+        <!-- <a href="###" target="_blank"> -->
+          <figure class="es-cross__single">
+            <img src="./img/pineapple.png">
+            <figcaption>
+              <h3 class="es-cross__title">Anananas</h3>
+              <p class="es-cross__subtitle">48H blasku*</p>
+              <p class="es-cross__descr">dla długich, matowych włosów</p>
+            </figcaption>
+          </figure>
+        <!-- </a> -->
+      </div>
+    </section>
+
+  </section>
+</body>
+
 </html>
