add disclaimer markup

--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
       </div>
     </section>
 
+    <section class="es-disclaimer">
+      <p>* Testy instrumentalne.</p>
+      <p>** Ilustracja oczekiwanych rezultatów. Indywidualne efekty mogą się różnić. Zdjęcia wykonane po użyciu urządzeń do stylizacji włosów na gorąco.</p>
+      <p>*** Poza korkiem, barwnikiem, dodatkami.</p>
+    </section>
+
   </section>
 </body>
 
