add footer markup

--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
       <p>*** Poza korkiem, barwnikiem, dodatkami.</p>
     </section>
 
+    <footer>
+      <img src="./img/footer.png">
+    </footer>
+    
   </section>
 </body>
 
