add cross sell copy

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <figure class="es-cross__single">
             <img src="./img/pineapple.png">
             <figcaption>
-              <h3 class="es-cross__title">Anananas</h3>
+              <h3 class="es-cross__title">Ananas</h3>
               <p class="es-cross__subtitle">48H blasku*</p>
               <p class="es-cross__descr">dla długich, matowych włosów</p>
             </figcaption>
@@ -191,21 +191,21 @@
         <!-- </a> -->
         <!-- <a href="###" target="_blank"> -->
           <figure class="es-cross__single">
-            <img src="./img/pineapple.png">
+            <img src="./img/papaya.png">
             <figcaption>
-              <h3 class="es-cross__title">Anananas</h3>
-              <p class="es-cross__subtitle">48H blasku*</p>
-              <p class="es-cross__descr">dla długich, matowych włosów</p>
+              <h3 class="es-cross__title">Papaja</h3>
+              <p class="es-cross__subtitle">93% mniej złamanych włosów*</p>
+              <p class="es-cross__descr">dla zniszczonych włosów</p>
             </figcaption>
           </figure>
         <!-- </a> -->
         <!-- <a href="###" target="_blank"> -->
           <figure class="es-cross__single">
-            <img src="./img/pineapple.png">
+            <img src="./img/banana.png">
             <figcaption>
-              <h3 class="es-cross__title">Anananas</h3>
-              <p class="es-cross__subtitle">48H blasku*</p>
-              <p class="es-cross__descr">dla długich, matowych włosów</p>
+              <h3 class="es-cross__title">Banan</h3>
+              <p class="es-cross__subtitle">10x bardziej odżywione włosy*</p>
+              <p class="es-cross__descr">dla suchych włosów</p>
             </figcaption>
           </figure>
         <!-- </a> -->
@@ -221,7 +221,7 @@
     <footer>
       <img src="./img/footer.png">
     </footer>
-    
+
   </section>
 </body>
 
