start on routine styles

--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
     </section>
 
     <section class="es-routine">
-      <h2 class="es-routine__header">Wypróbuj całą rutynę hair food pineapple</h2>
+      <h2 class="es-routine__header">Wypróbuj całą rutynę <span>hair food pineapple</span></h2>
       <div class="es-routine__wrapper--flex">
-        <!-- <a href="###" target="_blank"> -->
+        <a href="###" target="_blank">
         <figure class="es-routine__single">
           <img src="./img/shampoo.png">
           <figcaption>
-            <p class="es-routine__header">szampon</p>
+            <p class="es-routine__header--S">szampon</p>
             <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
           </figcaption>
         </figure>
-        <!-- </a> -->
+        </a>
         <!-- <a href="###" target="_blank"> -->
         <figure class="es-routine__single">
           <img src="./img/mask.png">
           <figcaption>
-            <p class="es-routine__header">maska</p>
+            <p class="es-routine__header--S">maska</p>
             <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
           </figcaption>
         </figure>
@@ -163,7 +163,7 @@
         <figure class="es-routine__single">
           <img src="./img/conditioner.png">
           <figcaption>
-            <p class="es-routine__header">odżywka</p>
+            <p class="es-routine__header--S">odżywka</p>
             <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
           </figcaption>
         </figure>
