--- a/index.html
+++ b/index.html
@@ -139,36 +139,42 @@
     </section>
 
     <section class="es-routine">
-      <h2 class="es-routine__header">Wypróbuj całą rutynę <span>hair food pineapple</span></h2>
-      <div class="es-routine__wrapper--flex">
-        <a href="###" target="_blank">
-        <figure class="es-routine__single">
-          <img src="./img/shampoo.png">
-          <figcaption>
-            <p class="es-routine__header--S">szampon</p>
-            <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
-          </figcaption>
-        </figure>
-        </a>
-        <!-- <a href="###" target="_blank"> -->
-        <figure class="es-routine__single">
-          <img src="./img/mask.png">
-          <figcaption>
-            <p class="es-routine__header--S">maska</p>
-            <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
-          </figcaption>
-        </figure>
-        <!-- </a> -->
-        <!-- <a href="###" target="_blank"> -->
-        <figure class="es-routine__single">
-          <img src="./img/conditioner.png">
-          <figcaption>
-            <p class="es-routine__header--S">odżywka</p>
-            <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
-          </figcaption>
-        </figure>
-        <!-- </a> -->
+      <div class="es-routine__bg">
+        <h2 class="es-routine__header">Wypróbuj całą rutynę <span>hair food pineapple</span></h2>
+        <div class="es-routine__wrapper--flex">
+          <!-- <a href="###" target="_blank"> -->
+          <figure class="es-routine__single">
+            <img class="es-routine__img" src="./img/shampoo.png">
+            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png">
+            <figcaption>
+              <p class="es-routine__header--S">szampon</p>
+              <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
+            </figcaption>
+          </figure>
+          <!-- </a> -->
+          <!-- <a href="###" target="_blank"> -->
+          <figure class="es-routine__single">
+            <img class="es-routine__img" src="./img/mask.png">
+            <img class="es-routine__arrow"  src="./img/arrow-left.png">
+            <figcaption>
+              <p class="es-routine__header--S">maska</p>
+              <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
+            </figcaption>
+          </figure>
+          <!-- </a> -->
+          <!-- <a href="###" target="_blank"> -->
+          <figure class="es-routine__single">
+            <img class="es-routine__img" src="./img/conditioner.png">
+            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-left.png">
+            <figcaption>
+              <p class="es-routine__header--S">odżywka</p>
+              <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
+            </figcaption>
+          </figure>
+          <!-- </a> -->
+        </div>
       </div>
+
       <div class="es-routine__wrapper--border">
         <p>Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z
           recyklingu***.</p>
@@ -180,41 +186,42 @@
       <h2 class="es-cross__header">Wybierz ulubionego <span>hair drinka</span> dla swoich spragnionych włosów!</h2>
       <div class=es-cross__wrapper--flex>
         <!-- <a href="###" target="_blank"> -->
-          <figure class="es-cross__single">
-            <img src="./img/pineapple.png">
-            <figcaption>
-              <h3 class="es-cross__title">Ananas</h3>
-              <p class="es-cross__subtitle">48H blasku*</p>
-              <p class="es-cross__descr">dla długich, matowych włosów</p>
-            </figcaption>
-          </figure>
+        <figure class="es-cross__single">
+          <img src="./img/pineapple.png">
+          <figcaption>
+            <h3 class="es-cross__title">Ananas</h3>
+            <p class="es-cross__subtitle">48H blasku*</p>
+            <p class="es-cross__descr">dla długich, matowych włosów</p>
+          </figcaption>
+        </figure>
         <!-- </a> -->
         <!-- <a href="###" target="_blank"> -->
-          <figure class="es-cross__single">
-            <img src="./img/papaya.png">
-            <figcaption>
-              <h3 class="es-cross__title">Papaja</h3>
-              <p class="es-cross__subtitle">93% mniej złamanych włosów*</p>
-              <p class="es-cross__descr">dla zniszczonych włosów</p>
-            </figcaption>
-          </figure>
+        <figure class="es-cross__single">
+          <img src="./img/papaya.png">
+          <figcaption>
+            <h3 class="es-cross__title">Papaja</h3>
+            <p class="es-cross__subtitle">93% mniej złamanych włosów*</p>
+            <p class="es-cross__descr">dla zniszczonych włosów</p>
+          </figcaption>
+        </figure>
         <!-- </a> -->
         <!-- <a href="###" target="_blank"> -->
-          <figure class="es-cross__single">
-            <img src="./img/banana.png">
-            <figcaption>
-              <h3 class="es-cross__title">Banan</h3>
-              <p class="es-cross__subtitle">10x bardziej odżywione włosy*</p>
-              <p class="es-cross__descr">dla suchych włosów</p>
-            </figcaption>
-          </figure>
+        <figure class="es-cross__single">
+          <img src="./img/banana.png">
+          <figcaption>
+            <h3 class="es-cross__title">Banan</h3>
+            <p class="es-cross__subtitle">10x bardziej odżywione włosy*</p>
+            <p class="es-cross__descr">dla suchych włosów</p>
+          </figcaption>
+        </figure>
         <!-- </a> -->
       </div>
     </section>
 
     <section class="es-disclaimer">
       <p>* Testy instrumentalne.</p>
-      <p>** Ilustracja oczekiwanych rezultatów. Indywidualne efekty mogą się różnić. Zdjęcia wykonane po użyciu urządzeń do stylizacji włosów na gorąco.</p>
+      <p>** Ilustracja oczekiwanych rezultatów. Indywidualne efekty mogą się różnić. Zdjęcia wykonane po użyciu urządzeń
+        do stylizacji włosów na gorąco.</p>
       <p>*** Poza korkiem, barwnikiem, dodatkami.</p>
     </section>
 
