hotfix arrow 2 position

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <!-- <a href="###" target="_blank"> -->
           <figure class="es-routine__single">
             <img class="es-routine__img" src="./img/mask.png">
-            <img class="es-routine__arrow"  src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png">
             <figcaption>
               <p class="es-routine__header--S">maska</p>
               <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
