--- a/index.html
+++ b/index.html
@@ -176,9 +176,12 @@
       </div>
 
       <div class="es-routine__wrapper--border">
-        <p>Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z
-          recyklingu***.</p>
-        <h2>Wybierając fructis hair food <span>wspierasz środowisko</span></h2>
+        <div class="es-routine__wrapper--content">
+          <p class="es-routine__descr--wrapper">Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z
+            recyklingu***.</p>
+          <h2 class="es-routine__header--wrapper">Wybierając fructis hair food <span>wspierasz środowisko</span></h2>
+        </div>
+
       </div>
     </section>
 
