--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <!-- <a href="###" target="_blank"> -->
         <figure class="es-cross__single">
           <img src="./img/pineapple.png">
-          <figcaption>
+          <figcaption class="es-cross__figcaption--1">
             <h3 class="es-cross__title">Ananas</h3>
             <p class="es-cross__subtitle">48H blasku*</p>
             <p class="es-cross__descr">dla długich, matowych włosów</p>
@@ -201,9 +201,9 @@
         <!-- <a href="###" target="_blank"> -->
         <figure class="es-cross__single">
           <img src="./img/papaya.png">
-          <figcaption>
+          <figcaption class="es-cross__figcaption--2">
             <h3 class="es-cross__title">Papaja</h3>
-            <p class="es-cross__subtitle">93% mniej złamanych włosów*</p>
+            <p class="es-cross__subtitle">93% mniej </br>złamanych włosów*</p>
             <p class="es-cross__descr">dla zniszczonych włosów</p>
           </figcaption>
         </figure>
@@ -211,9 +211,9 @@
         <!-- <a href="###" target="_blank"> -->
         <figure class="es-cross__single">
           <img src="./img/banana.png">
-          <figcaption>
+          <figcaption class="es-cross__figcaption--3">
             <h3 class="es-cross__title">Banan</h3>
-            <p class="es-cross__subtitle">10x bardziej odżywione włosy*</p>
+            <p class="es-cross__subtitle">10x bardziej </br>odżywione włosy*</p>
             <p class="es-cross__descr">dla suchych włosów</p>
           </figcaption>
         </figure>
