finish main layout

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <p>*** Poza korkiem, barwnikiem, dodatkami.</p>
     </section>
 
-    <footer>
+    <footer class="es-footer">
       <img src="./img/footer.png">
     </footer>
 
