--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Garnier Fructis Hair Drink</title>
-  <!-- google fonts -->
+  <!-- fonts -->
+  <link href="https://www.dafontfree.net/embed/Z290aGFtLWNvbmRlbnNlZC1ib2xkJmRhdGEvNDYvZy82MjgwMi9Hb3RoYW1Db25kZW5zZWQtQm9sZC5vdGY" rel="stylesheet" type="text/css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
   <!-- stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -33,7 +35,7 @@
           <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png" />
         </div>
         <div class="es-hero__right--headline">
-          <p>10x gładsze włosy* efekt tafli wody</p>
+          <p>10x gładsze włosy* </br>efekt tafli wody</p>
         </div>
       </div>
     </section>
@@ -131,6 +133,10 @@
             Twoja przeglądarka nie pozwala na wyświetlanie filmów.
           </video>
         </div> -->
+    </section>
+
+    <section class="es-video">
+
     </section>
 
     <section class="es-before-after">
