--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Garnier Fructis Hair Drink</title>
   <!-- fonts -->
-  <link href="https://www.dafontfree.net/embed/Z290aGFtLWNvbmRlbnNlZC1ib2xkJmRhdGEvNDYvZy82MjgwMi9Hb3RoYW1Db25kZW5zZWQtQm9sZC5vdGY" rel="stylesheet" type="text/css"/>
+  <link
+    href="https://www.dafontfree.net/embed/Z290aGFtLWNvbmRlbnNlZC1ib2xkJmRhdGEvNDYvZy82MjgwMi9Hb3RoYW1Db25kZW5zZWQtQm9sZC5vdGY"
+    rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
@@ -136,7 +138,16 @@
     </section>
 
     <section class="es-video">
-
+      
+      <div class="es-video__videoCnt">
+        <img src="./img/video.png"> <!-- remove this -->
+        <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
+        <!-- <div class="es-video__container">
+          <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
+            frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe> -->
+        </div>
+      </div>
     </section>
 
     <section class="es-before-after">
@@ -183,7 +194,8 @@
 
       <div class="es-routine__wrapper--border">
         <div class="es-routine__wrapper--content">
-          <p class="es-routine__descr--wrapper">Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w 100% wykonane z opakowań z
+          <p class="es-routine__descr--wrapper">Butelki szamponu i odżywki nadają się do ponownego przetworzenia i są w
+            100% wykonane z opakowań z
             recyklingu***.</p>
           <h2 class="es-routine__header--wrapper">Wybierając fructis hair food <span>wspierasz środowisko</span></h2>
         </div>
